<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/FragmentListItem_Pt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="0"
        android:hint="@string/FragmentListItems_Pt1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/FragmentListItems_Rv1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/FragmentListItems_BrHr1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FragmentListItem_Pt1" />

    <Button
        android:id="@+id/FragmentListItems_Bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FragmentListItems_Bt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/FragmentListItems_Bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FragmentListItems_Bt2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/FragmentListItems_BrHr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="FragmentListItems_Bt1,FragmentListItems_Bt2"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="731dp" />

</androidx.constraintlayout.widget.ConstraintLayout>