<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/FragmentItemDetails_Iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FragmentItemDetails_Tv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/FragmentItemDetails_Tv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/FragmentItemDetails_BrVr1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FragmentItemDetails_Tv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/FragmentItemDetails_Tv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/FragmentItemDetails_BrVr1"
        app:layout_constraintTop_toBottomOf="@+id/FragmentItemDetails_Tv1" />

    <TextView
        android:id="@+id/FragmentItemDetails_Tv3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/FragmentItemDetails_Tv3"
        app:layout_constraintBottom_toTopOf="@+id/FragmentItemDetails_Bt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/FragmentItemDetails_BrHr1" />

    <Button
        android:id="@+id/FragmentItemDetails_Bt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/FragmentItemDetails_Bt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/FragmentItemDetails_BrVr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="FragmentItemDetails_Iv1"
        tools:layout_editor_absoluteX="411dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/FragmentItemDetails_BrHr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="FragmentItemDetails_Iv1,FragmentItemDetails_Tv2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="731dp" />

</androidx.constraintlayout.widget.ConstraintLayout>